[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crashomon-tools"
version = "0.1.0"
requires-python = ">=3.11"
description = "Crashomon host toolkit: symbol ingestion and minidump symbolication"

[project.scripts]
crashomon-analyze = "crashomon_tools.analyze.cli:main"
crashomon-syms = "crashomon_tools.syms.cli:main"
crashomon-patchdmp = "crashomon_tools.patchdmp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crashomon_tools*"]
